# geomaglib

./: .gitignore  pyproject.toml  requirements.txt  util.py
geomaglib/: Leg_SHA_for_import.py  legendre.py  magmath.py  sh_loader.py  sh_vars.py  util.py
tests/: Test_legendre.py  Test_magmath.py  gsl_results.csv  test_sh_loader.py  test_sh_vars.py  test_util.py
