[project]
name = "geomaglib"
version = "0.1.0"
description = "A test version of Geomagnetism Library"
authors = [{ name = "Li-Yin Young", email = "you@example.com" }]
dependencies = [
    "requests",  # Example of a PyPI package
    ]

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
